--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "spatie/laravel-sluggable": "^3.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.14",
         "laravel/pint": "^1.0",
