--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.2",
         "artesaos/seotools": "^1.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "bumbummen99/shoppingcart": "^4.2",
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.12",
+        "mlevent/fatura": "^0.2.4",
         "nesbot/carbon": "^2.63",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-activitylog": "^4.7",
