--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.3",
+        "laraveldaily/laravel-charts": "^0.2.3",
         "livewire/livewire": "^2.12",
         "mlevent/fatura": "^0.2.4",
         "nesbot/carbon": "^2.63",
